--- a/enhancements.html
+++ b/enhancements.html
@@ -49,7 +49,7 @@
         </aside>
     </section>
 
-    <section class="bookview responsive">
+    <section class="bookview">
         <h2>Fully Responsive Webpage</h2>
         <article class="leftText" >
             This webpage was designed to be viewable on mobile devices.
@@ -72,7 +72,7 @@
         </aside>
     </section>
 
-    <section class="bookView responsice">
+    <section class="bookview">
         <h2>Other Enhancements</h2>
         <p class="leftText" >
             Some other enhancements which are worth mentioning:
