cahnged stID and photo

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <dt>Name</dt>
         <dd>Mohammad Salim Sadman</dd>
         <dt>Student ID</dt>
-        <dd>103500846</dd>
+        <dd>10XXXXXXX</dd>
         <dt>Tutor's Name</dt>
         <dd>Bo Li</dd>
         <dt>Course</dt>
@@ -47,7 +47,7 @@
         <dt>Unit</dt>
         <dd>COS10011 Creating Web Apps</dd>
         <dt>Email</dt>
-        <dd><a href="mailto:103500846@student.swin.edu.au">Student E-mail</a></dd>
+        <dd><a href="mailto:10XXXXXXX@student.swin.edu.au">Student E-mail</a></dd>
     </dl>
     </article>
 
