fixed typo in footer
scoial -> social

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     </nav>
     <div id="blankspace"></div>
 
-    <Section id="logoSection" class="responsive">
+    <Section id="logoSection">
 		About Me
 	</Section>
 
@@ -47,7 +47,7 @@
         <dt>Unit</dt>
         <dd>COS10011 Creating Web Apps</dd>
         <dt>Email</dt>
-        <dd><a href="mailto:10XXXXXXX@student.swin.edu.au">Student E-mail</a></dd>
+        <dd><a href="mailto:103XXXXXX@student.swin.edu.au">Student E-mail</a></dd>
     </dl>
     </article>
 
@@ -153,7 +153,7 @@
             <li> <a class="footlink" href="#about">About</a></li>
             <li> <a class="footlink" href="dud.html">Contract</a></li>
             <li> <a class="footlink" href="dud.html">Careers</a></li>
-            <li> <a class="footlink" href="dud.html">Scoial Media</a></li>
+            <li> <a class="footlink" href="dud.html">Social Media</a></li>
             <li> <a class="footlink" href="dud.html">Privacy Policy</a> </li>
             <li> <a class="footlink" href="dud.html">Terms & Conditions</a> </li>
             <li> <a class="footlink" href="dud.html">Cookie Policy</a> </li>
