--- a/apply.html
+++ b/apply.html
@@ -29,7 +29,7 @@
     </nav>
 	<div id="blankspace"></div>
 
-	<Section id="logoSection" class="responsive">
+	<Section id="logoSection">
 		Apply Now !
 	</Section>
 
@@ -110,8 +110,8 @@
 			</label>
 		</p>
 	
-		<div>
-			<p>Skills</p>
+		<fieldset>
+			<legend>Skills</legend>
 		<label class="checkSkills">HTML-CSS-JavaScript
 			<input type="checkbox" name="skills[]" value="HTMLcssJavaScript"/>
 		</label>
@@ -155,15 +155,15 @@
 		<label>Other Skills<br/>
 			<textarea name="skills[]" cols="30" rows="6" placeholder="Write comma separated values.."></textarea>
 		</label>
-	</div>
+	</fieldset>
 		
 		<div>
 			<input id="privacyPolicy" type="checkbox" required>
 			<label for="privacyPolicy">I acknowlege and accept the terms of the <a href="dud.html">privacy-policy</a> of cherry.</label>
 		</div>
 			
-		<input type="submit" value="Submit"/>
-		<input type="reset" value="Reset"/>
+		<input type="submit" class="animated-button" value="Submit"/>
+		<input type="reset" class="animated-button" value="Reset"/>
 		</fieldset>
 	</form>
 	<footer id="footbar">
@@ -171,7 +171,7 @@
             <li> <a class="footlink" href="#about">About</a></li>
             <li> <a class="footlink" href="dud.html">Contract</a></li>
             <li> <a class="footlink" href="dud.html">Careers</a></li>
-            <li> <a class="footlink" href="dud.html">Scoial Media</a></li>
+            <li> <a class="footlink" href="dud.html">Social Media</a></li>
             <li> <a class="footlink" href="dud.html">Privacy Policy</a> </li>
             <li> <a class="footlink" href="dud.html">Terms & Conditions</a> </li>
             <li> <a class="footlink" href="dud.html">Cookie Policy</a> </li>
