--- a/enhancements.html
+++ b/enhancements.html
@@ -25,7 +25,7 @@
     </nav>
     <div id="blankspace"></div>
 
-    <Section id="logoSection" class="responsive">
+    <Section id="logoSection">
 		Enhancements
 	</Section>
        
@@ -93,7 +93,7 @@
             <li> <a class="footlink" href="#about">About</a></li>
             <li> <a class="footlink" href="dud.html">Contract</a></li>
             <li> <a class="footlink" href="dud.html">Careers</a></li>
-            <li> <a class="footlink" href="dud.html">Scoial Media</a></li>
+            <li> <a class="footlink" href="dud.html">Social Media</a></li>
             <li> <a class="footlink" href="dud.html">Privacy Policy</a> </li>
             <li> <a class="footlink" href="dud.html">Terms & Conditions</a> </li>
             <li> <a class="footlink" href="dud.html">Cookie Policy</a> </li>
